Add preview test

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -4,15 +4,13 @@
 
     <!-- Permissions -->
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -41,7 +39,19 @@
             android:name=".ViewStreamSingle"
             android:label="@string/title_activity_display_single_stream" >
         </activity>
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".TakePicture"
+            android:label="@string/title_activity_camera"
+            android:parentActivityName=".ImageUpload" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.aptdemo.yzhao.androiddemo.ImageUpload" />
+        </activity>
     </application>
 
 </manifest>
