--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name=".ViewStreamSingle"
             android:label="@string/title_activity_display_single_stream" >
         </activity>
+        <activity
+            android:name=".SearchStream"
+            android:label="@string/title_activity_display_single_stream" >
+        </activity>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     </application>
 
