--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -1,51 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="apt.com.miniproject" >
-<!-- Permissions -->
 
+    <!-- Permissions -->
 
-<uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-<uses-permission android:name="android.permission.USE_CREDENTIALS" />
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-<uses-permission android:name="android.permission.CAMERA" />
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".Homepage"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<application
-    android:allowBackup="true"
-    android:icon="@drawable/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme" >
-    <activity
-        android:name=".Homepage"
-        android:label="@string/app_name" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ViewStream"
+            android:label="@string/title_activity_display_images" >
+        </activity>
+        <activity
+            android:name=".ImageUpload"
+            android:label="@string/title_activity_image_upload" >
+        </activity>
+        <activity
+            android:name=".ViewStreamSingle"
+            android:label="@string/title_activity_display_single_stream" >
+        </activity>
+        <activity
+            android:name=".SearchStream"
+            android:label="@string/title_activity_display_single_stream" >
+        </activity>
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    <activity
-        android:name=".ViewStream"
-        android:label="@string/title_activity_display_images" >
-    </activity>
-    <activity
-        android:name=".ImageUpload"
-        android:label="@string/title_activity_image_upload" >
-    </activity>
-    <activity
-        android:name=".ViewStreamSingle"
-        android:label="@string/title_activity_display_single_stream" >
-    </activity>
-    <activity
-        android:name=".SearchStream"
-        android:label="@string/title_activity_display_single_stream" >
-    </activity>
-    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
-</application>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".ViewSubscribedStream"
+            android:label="@string/title_activity_view_subscribed_stream" >
+        </activity>
+        <activity
+            android:name=".ViewNearby"
+            android:label="@string/title_activity_view_nearby" >
+        </activity>
+        <activity
+            android:name=".ShowMore"
+            android:label="@string/title_activity_show_more" >
+        </activity>
+    </application>
 
 </manifest>
-
