--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:name=".ShowMore"
             android:label="@string/title_activity_show_more" >
         </activity>
+        <activity
+            android:name=".TakePicture"
+            android:label="@string/title_activity_take_pictures" >
+        </activity>
     </application>
 
 </manifest>
